# xdf-specification

./: .gitignore  Jenkinsfile  README.md  dictionary.xsd  pyproject.toml
example_files/: den-net-c_2.9.0.xdf3  dictionary_with_tables_minimal.xdf3  evs-net-e_2.9.0.xdf3
tests/: conftest.py  test_example_files_validation.py  test_version_validation.py
